style.css
html,
body {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  /*     height: 100vh; */
}
.main-screen-text{
  padding: 0;
  margin: 0;
  font-size: 7vw;
}

#home {
  display: flex;
  flex-direction: column;
  height: 100vh;
  width: 100%;
  /* background-color: gray; */
  background-image: linear-gradient(to top, #9890e3 0%, #b1f4cf 100%);
}
.middle {
  height: 50%;
  margin-top: 75px;
  /* background-color: #335; */
  text-shadow: 1px 1px 5px #133 ;
  
  color: white;
  font-size: 2.5rem;
  width: 100%;
  text-align: center;
}
#particles-js{
  position: absolute;
  width: 100%;
  height: 100%;
}
.social-network {
  /* background-color: #334; */
  position: absolute;
  right: 0;
  top: 25%;
  /*   bottom: 35%; */
  width: 100px;
  height: 43%;
}
.social-network ul {
  list-style-type: none;
}
.social-network ul li {
  padding-top: 15px;
}
.social-network ul li a {
  text-decoration: none;
  color: white;
}

.social-img {
  width: 40px;
  height: 40px;
}

ul li a img:hover{
  box-shadow: 0 0 20px yellow;
}

.navbar {
  background-color: rgb(37, 37, 37);
  overflow: hidden;
  position: fixed;
  bottom: 0;
  width: 100%;
  z-index: 1000;
  opacity: 0.8;
}

.navbar a {
  /* height: 75px;   */
  float: left;
  display: block;
  color: #f2f2f2;
  text-align: center;
  text-decoration: none;
  padding: 14px 50px;
  font-size: 18px;
}

.navbar a:hover {
  background-color: #ddd;
  color: black;
}
.navbar a.active {
  background-color: #15e01c;
  color: white;
}

.navbar .icon {
  display: none;
  background-color: rgb(37, 37, 37);
  
}

@media screen and (max-width: 620px) {
  .navbar a:not(:first-child) {display: none;}
  .navbar a.icon {
    float: right;
    display: block;
  }
}

@media screen and (max-width: 620px) {
  .navbar.responsive {
    position: fixed;
    margin-bottom: 40px; 
  }
  .navbar.responsive .icon {
    position: fixed;
    right: 0;
    bottom: 0;
  }
  .navbar.responsive a {
    /* position: fixed; */
    /* float: left; */
    display: block;
    padding: 10px 0;
    width: 100%;
    /* text-align: left; */
  } 

  .middle{
    margin-top: 45%; 
  } 
}

#about {
  display: flex;
  flex-direction: column;
  height: 100vh;
  width: 100%;
  background-color: #233;
  color: #ddd;
  text-align: center;
  
}
#about h1{
  font-size: 3rem;
} 
#about p{
  margin: 10%;
} 
#projects {
  display: flex;
  flex-direction: column;
  height: 110vh;
  width: 100%;
  color: white;
  background-color: #133;
  /* padding-bottom:70px;   */
}
#projects h1 {
  text-align: center;
  margin-top: 15px;
  margin-bottom: 15px;
  
}
.img-carousel {
  margin-left: 10%;
  margin-right: 10%;
}
.img-carousel a {
  color: white;
  text-decoration: none;
  /* margin: 15px; */
  margin-right: 20px;  
}
.img-carousel a img {
  height: 180px;
}
.img-carousel a img:hover{
  box-shadow: 0 0 25px yellow;
}

